# model-harness-eval

./: .gitignore  README.md  pyproject.toml  reports_data.json
docs/superpowers/plans/: 2026-05-30-eval-spine-phase0-1.md  2026-05-30-tool-use-c2-benchmark.md
docs/superpowers/specs/: 2026-05-30-ai-augmented-sca-analysis-design.md  2026-05-30-tool-use-c2-benchmark-design.md
reports/: agg.json  main.md
scripts/: build_pricing_figure.py  build_report.py  extract_run_data.py  gen_c2_corpus.py
src/sca_eval/: datasets.py  extract.py  matrix.py  pricing.py  run.py  scorers.py  tasks.py  verdict.py
src/sca_eval/data/: code_comprehension.jsonl  code_comprehension_hard.jsonl  obfuscation.jsonl  obfuscation_hard.jsonl  security_reasoning.jsonl  security_reasoning_hard.jsonl  tool_use_c2.jsonl  tool_use_c2_hard.jsonl
src/sca_eval/data/payloads/: tuc-001.txt  tuc-002.txt  tuc-003.js  tuc-004.py  tuc-005.js  tuc-006.txt  tuc-007.txt  tuc-008.txt  tuc-009.txt  tuc-010.js  tuch-001.txt  tuch-002.py  tuch-003.txt  tuch-004.py  tuch-005.js  tuch-006.py  tuch-007.py  tuch-008.txt
src/sca_eval/sandbox/: compose.yaml
tests/: test_c2_dataset.py  test_c2_sandbox.py  test_datasets.py  test_e2e_mockllm.py  test_extract_mockllm.py  test_matrix.py  test_pricing.py  test_run_mockllm.py  test_scorers.py  test_smoke.py  test_tasks.py  test_tooluse_extract.py  test_tooluse_matrix.py  test_verdict.py
