[project]
name = "sca-eval"
version = "0.1.0"
description = "Model-independent capability eval spine for AI-augmented SCA analysis"
requires-python = ">=3.11"
dependencies = [
    "inspect-ai>=0.3,<0.4",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sca_eval"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
